--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
+aniso8601==9.0.1
 asgiref==3.8.1
 distlib==0.3.9
 Django==4.2.16
+django-graphql-jwt==0.4.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 filelock==3.16.1
+graphene==3.3
+graphene-django==3.2.2
+graphql-core==3.2.5
+graphql-relay==3.2.0
+lxml==5.3.0
 numpy==2.0.2
 platformdirs==4.3.6
+promise==2.3
+PyJWT==2.9.0
+pytz==2024.2
+rest-framework-simplejwt==0.0.2
 scipy==1.13.1
+six==1.16.0
+spyne==2.14.0
 sqlparse==0.5.1
+text-unidecode==1.3
 typing_extensions==4.12.2
 virtualenv==20.26.6
